deployment-examples/openstack-kubernetes/kubernetes-deployment/ingress.yml
# TODO
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard-kong-proxy 
            port:
              number: 443
        path: /dashboard
        pathType: ImplementationSpecific
